--- a/README
+++ b/README
@@ -12,13 +12,13 @@ SETUP INSTRUCTIONS
 CONFIGURE
 =============
 
-To start collecting data, simply add a channel. Once you've added a channel, you can view the data in the main view. 
+To start collecting data, simply create a new metric and assign it a key. The key will be used as an identifier when you push data to Easy Metric. Once you've added a metric, you can view the data in the main view. 
 
 
 USAGE
 =============
 
-Pushing new data to a channel is as simple as a http GET request. Just use your favorite scripting language and make a request to http://YOUR_SERVER/push/your_channel/your_value. Where your channel is the name of the channel you previously added and your_value is the value you want to add.
+Pushing new data to a metric is as simple as a http GET request. Just use your favorite scripting language and make a request to http://YOUR_SERVER/push/your_key/data/your_value. Where your key is the name of the key you previously added and your_value is the value you want to add.
 
 
 For support, contact me at me@simonmathieu.com.
